[gd_scene load_steps=13 format=3 uid="uid://ci56mujkb447q"]

[ext_resource type="Texture2D" uid="uid://bi0j445fte67a" path="res://assets/sprites/remicat.png" id="1_7agey"]
[ext_resource type="Script" path="res://scripts/gameplay/main.gd" id="1_tiv6p"]
[ext_resource type="Script" path="res://scripts/gameplay/pet.gd" id="2_372i7"]
[ext_resource type="Script" path="res://scenes/offline_handler.gd" id="2_tyf2r"]
[ext_resource type="Script" path="res://scripts/gameplay/pet_manager.gd" id="3_ssks3"]
[ext_resource type="Script" path="res://scenes/pet_states.gd" id="4_n8fpk"]
[ext_resource type="Script" path="res://scenes/ui_manager.gd" id="6_v5lcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2otcc"]
atlas = ExtResource("1_7agey")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1apr8"]
atlas = ExtResource("1_7agey")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0urq"]
atlas = ExtResource("1_7agey")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml4eg"]
atlas = ExtResource("1_7agey")
region = Rect2(384, 144, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_tegl6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2otcc")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_1apr8")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0urq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml4eg")
}],
"loop": true,
"name": &"Sleep",
"speed": 0.1
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_tiv6p")

[node name="OfflineHandler" type="Node" parent="."]
script = ExtResource("2_tyf2r")

[node name="Room" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="Room"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 848.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.245124, 0.0676741, 0.000735546, 1)

[node name="Darkness" type="ColorRect" parent="Room"]
visible = false
z_index = 5
offset_right = 480.0
offset_bottom = 856.0
color = Color(0, 0, 0, 0.788235)

[node name="Pet" type="Node2D" parent="."]
position = Vector2(240, 426)
script = ExtResource("2_372i7")

[node name="PetManager" type="Node" parent="Pet"]
script = ExtResource("3_ssks3")

[node name="PetStates" type="Node" parent="Pet"]
script = ExtResource("4_n8fpk")

[node name="PetSprite" type="AnimatedSprite2D" parent="Pet"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_tegl6")
animation = &"Idle"
autoplay = "Idle"
frame = 1
frame_progress = 0.133544

[node name="UI" type="Node" parent="."]

[node name="UIManager" type="Node" parent="UI"]
script = ExtResource("6_v5lcp")

[node name="TopContainer" type="HBoxContainer" parent="UI"]
offset_left = 12.0
offset_top = 16.0
offset_right = 468.0
offset_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MeterContainer" type="VBoxContainer" parent="UI/TopContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HungerMeterLabel" type="Label" parent="UI/TopContainer/MeterContainer"]
layout_mode = 2
text = "HUNGER"

[node name="HappyMeterLabel" type="Label" parent="UI/TopContainer/MeterContainer"]
layout_mode = 2
text = "HAPPINESS"

[node name="SleepMeterLabel" type="Label" parent="UI/TopContainer/MeterContainer"]
layout_mode = 2
text = "SLEEP"

[node name="HealthMeterLabel" type="Label" parent="UI/TopContainer/MeterContainer"]
layout_mode = 2
text = "HEALTH"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/TopContainer/MeterContainer"]
layout_mode = 2

[node name="TopRightContainer" type="VBoxContainer" parent="UI/TopContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="CoinsLabel" type="Label" parent="UI/TopContainer/TopRightContainer"]
visible = false
layout_mode = 2
text = "999999999"

[node name="PowerLabel" type="Label" parent="UI/TopContainer/TopRightContainer"]
visible = false
layout_mode = 2
text = "999999999"

[node name="LevelLabel" type="Label" parent="UI/TopContainer/TopRightContainer"]
layout_mode = 2
text = "X DAYS OLD"

[node name="ButtonContainer" type="HBoxContainer" parent="UI"]
z_index = 10
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -134.0
offset_right = -12.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0

[node name="FoodButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "FOOD"

[node name="PlayButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "PLAY"

[node name="MedicineButton" type="Button" parent="UI/ButtonContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "MEDICINE"

[node name="SleepButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SLEEP"

[node name="DEBUGBUTTON" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
text = "DEBUG"

[connection signal="pressed" from="UI/ButtonContainer/FoodButton" to="UI/UIManager" method="_on_food_button_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/PlayButton" to="UI/UIManager" method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/SleepButton" to="UI/UIManager" method="_on_sleep_button_pressed"]
[connection signal="pressed" from="UI/ButtonContainer/DEBUGBUTTON" to="UI/UIManager" method="_on_debugbutton_pressed"]
